Add vdb endpoint
