# krcg_api/api.py
@@ -8,6 +8,7 @@ import os
 import pkg_resources  # part of setuptools
 import requests
 import urllib.parse
+import urllib.request
 
 from krcg import analyzer
 from krcg import deck
@@ -135,13 +136,23 @@ def convert(format="json"):
 @base.route("/amaranth", methods=["POST"])
 def amaranth():
     data = flask.request.form or flask.request.json
-    try:
-        url = data["url"]
-        if url[:34] != "https://amaranth.vtes.co.nz/#deck/":
-            return "Amaranth URL required", 400
-        return flask.jsonify(deck.Deck.from_amaranth(url[34:]).to_json())
-    except KeyError:
+    if "url" not in data:
         return "Missing required parameter: url", 400
+    url = data["url"]
+    if url[:34] != "https://amaranth.vtes.co.nz/#deck/":
+        return "Amaranth URL required", 400
+    return flask.jsonify(deck.Deck.from_amaranth(url[34:]).to_json())
+
+
+@base.route("/vdb", methods=["POST"])
+def vdb():
+    data = flask.request.form or flask.request.json
+    if "url" not in data:
+        return "Missing required parameter: url", 400
+    url = data["url"]
+    if url[:32] != "https://vdb.smeea.casa/decks?id=":
+        return "VDB URL required", 400
+    return flask.jsonify(deck.Deck.from_vdb(url[32:]).to_json())
 
 
 @base.route("/candidates", methods=["POST"])
