# krcg_api/templates/openapi.yaml
@@ -1866,7 +1866,6 @@ paths:
               examples: { deck: { $ref: "#/components/examples/deck" } }
         "404":
           description: Not Found
-
   /convert/{format}:
     post:
       tags: [Deck]
@@ -2046,3 +2045,43 @@ paths:
           description: |
             Malformed body. The Amaranth URL is expected to begin with
             https://amaranth.vtes.co.nz/#deck/
+  /vdb:
+    post:
+      tags: [Deck]
+      summary: Retrieve a deck from VDB
+      description: |
+        Retrieve a deck from [VDB](https://vdb.smeea.casa) 
+        using a share URL.
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                url:
+                  type: string
+                  description: "[VDB](https://https://vdb.smeea.casa) share URL"
+                  format: uri
+            example:
+              url: "https://vdb.smeea.casa/decks?id=b798e734fff7404085f7b01ad2ccb479"
+          application/json:
+            schema:
+              type: object
+              properties:
+                url:
+                  type: string
+                  description: "[VDB](https://vdb.smeea.casa) share URL"
+                  format: uri
+            example:
+              url: "https://vdb.smeea.casa/decks?id=b798e734fff7404085f7b01ad2ccb479"
+      responses:
+        "200":
+          description: Success, returns the deck
+          content:
+            application/json:
+              schema: { $ref: "#/components/schemas/deck" }
+              examples: { deck: { $ref: "#/components/examples/first-blood-tremere" } }
+        "400":
+          description: |
+            Malformed body. The VDB URL is expected to begin with
+            "https://vdb.smeea.casa/decks?id="
